fault-inject/01-inject-delay-fault.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ratings
  namespace: bookinfo
spec:
  hosts:
    - ratings.bookinfo.svc.cluster.local
  http:
    - fault:
        delay:
          percent: 100
          fixedDelay: 2s
      route:
        - destination:
            host: ratings
            subset: v1
