fault-inject/03-timeout-reviews-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: reviews
  namespace: bookinfo
spec:
  hosts:
    - reviews.bookinfo.svc.cluster.local
  http:
  - route:
    - destination:
        host: reviews
        subset: v2
    timeout: 0.5s
